EventMate/WebContent/css/stylesheet.css
@CHARSET "ISO-8859-1";

li
{
	display:inline;
	margin-left:9%;
	padding: 0;
border: none;
background: none;
}

a img
{
	border: none;
	outline:none;
}

ul.header2
{
	list-style-type:none;
	margin:0;
	/*background-color: rgb(184,182,186); */
	/*background-color:#FFFFFF; */
	background-color:#E6E6E6;
	padding:0;
	bottom:0;
	width:100%;
	display:block;
	margin-left:auto;
	margin-right:auto;
	
}

ul.header
{
	list-style-type:none;
	margin:0;
	padding:0;
	border-bottom:thin solid rgb(51,181,229);
	
}

.event
{
	border-bottom:thin solid rgb(51,181,229);
	border-top:thin solid rgb(51,181,229);
	margin-bottom:1%;
	margin-top:1%;
}


ul.footer
{
	list-style-type:none;
	margin:0;
	border-top:thin solid rgb(51,181,229);
	padding:0;
	
}
.divRight
{
	border:2px;
	border-radius:25px;

	width:48%;
	margin-top:30%;
	margin-bottom:1%;
	float:right;
	/*background-color:#FFFFFF; */
	/*background-color:rgb(51,181,229); */
	background-color:#E6E6E6;
	
	
}

.divRight2
{
	border:2px;
	border-radius:25px;
	float:right;
	width:48%;
/*	background-color:#FFFFFF; */
/*background-color:rgb(51,181,229);*/
background-color:#E6E6E6;
	
	
}

.divLeft
{
	border:2px;
	border-radius:25px;
	
	width:48%;
	margin-top:30%;
	margin-bottom:2%;
	float:left;
	/*background-color:#FFFFFF; */
	/*background-color:rgb(51,181,229);*/
	background-color:#E6E6E6;
	
	
}

.divLeft2
{
	border:2px;
	border-radius:25px;
	
	width:45%;
	
	
	float:left;
	/*background-color:#FFFFFF;*/
	/*background-color:rgb(51,181,229);*/
	background-color:#E6E6E6;
	
	
}

.divMain2
{
	border:2px;
	border-radius:25px;
	width:1000px;
	margin-left:auto;
	margin-right:auto;
	min-height:100%;

	background-color:#E6E6E6;  
	/*background-color:#E6E6E6;*/
	margin-top:2%;
	
	
	
}

.textarea
{
	margin-left:18%;
    margin-top:3%;
}




/*  CSS found here http://konigi.com/tools/css-tooltips-and-speech-bubbles  */
.bubble {
  position: relative;
  background-color:#D0F5A9;
  margin: 0;
  padding:10px;
  text-align:center;
  width:300px;
  -moz-border-radius:10px;
  -webkit-border-radius:10px;
  -webkit-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
  -moz-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
  box-shadow: 0px 0 3px rgba(0,0,0,0.25); 

    justify-content: flex-end;
 
}
.bubble:after {
  position: absolute;
  display: block;
  content: "";  
  border-color: #D0F5A9 transparent transparent transparent;
  border-style: solid;
  border-width: 10px;
  height:0;
  width:0;
  position:absolute;
  bottom:-19px;
  right:1em;
}

.beforeBubble
{
	  float:right;
   margin-right:3%;
   margin-top:1%;
   margin-bottom:2%;
   clear:both;
}

.beforeBubble2
{
	float:left;
  margin-left:3%;
  margin-top:1%;
  margin-bottom:2%;
   clear:both;
}

.bubble2 {
  position: relative;
  background-color:#eee;
  margin: 0;
  padding:10px;
  text-align:center;
  width:300px;
  -moz-border-radius:10px;
  -webkit-border-radius:10px;
  -webkit-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
  -moz-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
  box-shadow: 0px 0 3px rgba(0,0,0,0.25); 
 
  
}
.bubble2:after {
  position: absolute;
  display: block;
  content: "";  
  border-color: #eee transparent transparent transparent;
  border-style: solid;
  border-width: 10px;
  height:0;
  width:0;
  position:absolute;
  bottom:-19px;
  left:1em;
}
.message
{
	border:2px;
	border-radius:25px;
	height:700px;
	margin-left:10%;
	margin-right:10%;
	
	margin-top:2%;
	width:800px;
	background-color:white;
	overflow:scroll;
	

	
}

.sender
{
	overflow:auto;
	border:2px;
	border-radius:25px;
	background-color:#E6E6E6;
	margin-left:2%;
	margin-right:2%;
	float:right;
	width:400px;
	margin-top:2%;
	margin-bottom:1%;

display: table-cell;
    vertical-align: bottom;
	
	
}



.reciever
{
	overflow:auto;
	border:2px;
	border-radius:25px;
	background-color:#D0F5A9;
	margin-left:2%;
	
	float:left;
	width:400px;
	display: table-cell;
    vertical-align: bottom;
	
	 
	
	
}



.senderPost
{
	margin-left:4%;
	margin-right:4%;
	display:block;
}




.font
{
    font-family: 'Glegoo', serif;
	font-size:120%;
/* 	color:rgb(203,202,204); */
/*	color:rgb(184,182,186); */
	/*color:#E6E6E6;*/
	color:rgb(51,181,229);
	margin-left:25%;
	
	
}

.fontCheck
{
    font-family: 'Glegoo', serif;
	font-size:110%;
/* 	color:rgb(203,202,204); */
/*	color:rgb(184,182,186); */
	/*color:#E6E6E6;*/
	color:rgb(51,181,229);
	margin-left:2%;

}

.blueFont
{
	font-family: 'Glegoo', serif;
	font-size:140%;
	margin-left:8%;
	margin-right:8%;
	color:rgb(51,181,229);
	
}

.smallBlueFont
{
	font-family: 'Glegoo', serif;
	font-size:80%;
	
	color:rgb(51,181,229);
	
}

.blueFont3
{
	font-family: 'Glegoo', serif;
	font-size:140%;
	color:rgb(51,181,229);
	
}

.smallGreyFont
{
	 font-family: 'Glegoo', serif;
	font-size:100%;
	margin-left:8%;
	margin-right:8%;
	color:rgb(51,181,229);
/*	color:rgb(184,182,186); */
/* color:#E6E6E6; */
/*color:white;*/
	
	
}


.eventMate
{
/* 	font-family: 'Vibur', cursive; */
font-family: 'Codystar', cursive;
	font-size:250%;
	color:rgb(51,181,229);
	
	margin-left:30%;
	margin-top:20%;

}

.eventMate2
{
/* 	font-family: 'Vibur', cursive; */
font-family: 'Codystar', cursive;
	font-size:150%;
	/*color:#9A2EFE; */
	color:black;
	margin-left:30%;
	margin-top:20%;

}

/* .button { */
/* 	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7; */
/* 	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7; */
/* 	box-shadow:inset 0px 1px 0px 0px #bbdaf7; */
/* 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) ); */
/* 	background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% ); */
/* 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5'); */
/* 	background-color:#79bbff; */
/* 	-webkit-border-top-left-radius:20px; */
/* 	-moz-border-radius-topleft:20px; */
/* 	border-top-left-radius:20px; */
/* 	-webkit-border-top-right-radius:20px; */
/* 	-moz-border-radius-topright:20px; */
/* 	border-top-right-radius:20px; */
/* 	-webkit-border-bottom-right-radius:20px; */
/* 	-moz-border-radius-bottomright:20px; */
/* 	border-bottom-right-radius:20px; */
/* 	-webkit-border-bottom-left-radius:20px; */
/* 	-moz-border-radius-bottomleft:20px; */
/* 	border-bottom-left-radius:20px; */
/* 	text-indent:0; */
/* 	border:1px solid #84bbf3; */
/* 	display:inline-block; */
/* 	color:#ffffff; */
/* 	font-family:Arial; */
/* 	font-size:15px; */
/* 	font-weight:bold; */
/* 	font-style:normal; */
/* 	height:35px; */
/* 	line-height:35px; */
/* 	width:85px; */
/* 	text-decoration:none; */
/* 	text-align:center; */
/* 	text-shadow:1px 1px 0px #528ecc; */
/* } */
/* .button:hover { */
/* 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) ); */
/* 	background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% ); */
/* 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff'); */
/* 	background-color:#378de5; */
/* }.button:active { */
/* 	position:relative; */
/*	top:1px;
} */

.blackFont
{
	font-family: 'Glegoo', serif;
	font-size:110%;
	
	color:black;
}

.blueFont2
{
	font-family: 'Glegoo', serif;
	font-size:110%;
	
	color: rgb(51,181,229);
}

.imgBorder
{
border:4px solid;
border-radius:25px;
border-color:white;
}




.button {
font-family: 'Glegoo', serif;
font-size: 14px;
color: rgb(51,181,229);
padding: 8px 15px;
background: -moz-linear-gradient(
top,
‪#‎ffffff‬ 0%,
‪#‎d6d6d6‬);
background: -webkit-gradient(
linear, left top, left bottom,
from(#ffffff),
to(#d6d6d6));
-moz-border-radius: 15px;
-webkit-border-radius: 15px;
border-radius: 15px;
border: 2px solid #33b6e5;
-moz-box-shadow:
0px 0px 0px rgba(000,000,000,0),
inset 0px 0px 0px rgba(255,000,217,0.9);
-webkit-box-shadow:
0px 0px 0px rgba(000,000,000,0),
inset 0px 0px 0px rgba(255,000,217,0.9);
box-shadow:
0px 0px 0px rgba(000,000,000,0),
inset 0px 0px 0px rgba(255,000,217,0.9);
text-shadow:
0px 0px 0px rgba(000,000,000,0),
0px 0px 0px rgba(255,255,255,0);
0px 0px rgba(255,255,255,0);
}

.main
{
	width:1000px;
	margin-left:auto;
	margin-right:auto;
	min-height:100%;
	
	
	
	
	
}
body.signUp
{
	/*background-color:rgb(51,181,229);  */
	background:url("../images/d.JPG") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-color:black;
	

/*background-color:#E0ECF8; */
	
}

body
{
	background-color:rgb(51,181,229);
	min-height:100%;
	margin:0;
	padding:0;
}


html,body
{
	min-height:100%;
	margin:0;
	height:100%;
	padding:0;
	
}

.userimgBorder
{
	border:2px;
	border-radius:15px;

}

*
{
	margin:0;
	padding:0;
}

.profile {
margin-top:7%;
margin-left:100px;
}

.profilePicture {
width:35%;
float:left;
}

.profileRight {
margin-right:5%;
margin-bottom:15%;
}

.profileMore {
float:left;
width:50%;;
}

.randomEvent {
margin-top:7%;
margin-left:100px;
}

